# lil2

./: .gitignore  README.md  meson.build  meson_options.txt
doc/: indexing.tex
include/: fourier.hpp  meson.build  modulus.hpp  smith_adapter.hpp  supercell.hpp  type_pretty.hpp  unitcell_types.hpp  unitcellspec.hpp  vec3.hpp
src/: meson.build  unitcellspec.cpp
subprojects/: smith_normal_form.wrap
tests/: basic_fourier.cpp  common.hpp  cubic_construct.cpp  cubic_fourier.cpp  meson.build  planar_vs_3D.cpp  pyro_construct.cpp  pyro_dilution.cpp  pyro_fourier.cpp  pyro_test.cpp  single_valued.cpp  snf_dims.cpp  square_fourier.cpp  sublat_correlator.cpp  tmp.txt
